--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
 
     <script src="js/config.js"></script>
-    <script src="js/sample-data.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/app.js"></script>
     <script src="js/google-sheets.js"></script>
     <script src="js/dashboard.js"></script>
