--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Budget Manager</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/google-sheets.js"></script>
 </head>
 <body>
     <div class="container">
@@ -138,10 +136,10 @@
     <script src="js/config.js"></script>
     <script src="js/data.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/google-sheets.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/income.js"></script>
     <script src="js/expense.js"></script>
     <script src="js/savings.js"></script>
+    <script src="js/google-sheets.js"></script>
 </body>
 </html>
